# kopete-sharemydesktop

./: CMakeLists.txt  Messages.sh  kopete_sharemydesktop.desktop  share-my-desktop-chat-ui.rc  share-my-desktop-gui-client.cpp  share-my-desktop-gui-client.h  share-my-desktop-plugin.cpp  share-my-desktop-plugin.h
